fix bavbar position

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,42 +14,42 @@
     <title>Aliance</title>
   </head>
   <body>
-    <header class="header header-image">
-      <nav class="navbar">
-        <a href="./" class="header-logo">
-          <img
-            class="logo-light"
-            src="./img/logo-light.svg"
-            alt="Aliance Production"
-          />
+    <nav class="navbar">
+      <a href="./" class="header-logo">
+        <img
+          class="logo-light"
+          src="./img/logo-light.svg"
+          alt="Aliance Production"
+        />
+      </a>
+      <ul class="header-nav">
+        <li class="header-nav-item">
+          <a href="`" class="heaer-nav-link">О компании</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="" class="heaer-nav-link">Контрактное производство</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="" class="heaer-nav-link">Собственные торговые марки</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="" class="heaer-nav-link">Новости</a>
+        </li>
+        <li class="header-nav-item">
+          <a href="" class="heaer-nav-link">Контакты</a>
+        </li>
+      </ul>
+      <div class="header-phone">
+        <img src="./img/icon-phone.svg" alt="" />
+        <a href="tel:+7(499)6861014" class="header-phone-link">
+          +7 (499) 686-10-14
         </a>
-        <ul class="header-nav">
-          <li class="header-nav-item">
-            <a href="`" class="heaer-nav-link">О компании</a>
-          </li>
-          <li class="header-nav-item">
-            <a href="" class="heaer-nav-link">Контрактное производство</a>
-          </li>
-          <li class="header-nav-item">
-            <a href="" class="heaer-nav-link">Собственные торговые марки</a>
-          </li>
-          <li class="header-nav-item">
-            <a href="" class="heaer-nav-link">Новости</a>
-          </li>
-          <li class="header-nav-item">
-            <a href="" class="heaer-nav-link">Контакты</a>
-          </li>
-        </ul>
-        <div class="header-phone">
-          <img src="./img/icon-phone.svg" alt="" />
-          <a href="tel:+7(499)6861014" class="header-phone-link">
-            +7 (499) 686-10-14
-          </a>
-        </div>
-        <!-- /.header-phone -->
-        <button class="navbar-button button">Получить консультацию</button>
-      </nav>
-      <!-- /.navbar -->
+      </div>
+      <!-- /.header-phone -->
+      <button class="navbar-button button">Получить консультацию</button>
+    </nav>
+    <!-- /.navbar -->
+    <header class="header header-image">
       <div class="container">
         <div class="header-content">
           <div class="seporator"></div>
@@ -124,7 +124,7 @@
               Безусловно, сплочённость команды профессионалов позволяет оценить
               значение форм воздействия.
             </p>
-            <a href="#" class="steps-link">Оставить заявку</a>
+            <a href="" class="steps-link">Оставить заявку</a>
           </li>
           <li class="steps-item">
             <span class="steps-num">02</span>
