fix: pixel perfect

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header class="header header-image">
       <div class="container">
         <div class="header-content">
-          <div class="seporator"></div>
+          <div class="seporator header-seporator"></div>
           <h1 class="header-title">
             Комплексное обеспечение товарами и расходными материалами бизнеса
           </h1>
@@ -62,7 +62,7 @@
             будущего проекта напрямую зависит от анализа существующих паттернов
             поведения.
           </p>
-          <div class="button">Подробнее о компании</div>
+          <div class="header-button button">Подробнее о компании</div>
         </div>
         <!-- /.header-content -->
         <ul class="header-features">
@@ -103,8 +103,8 @@
     </header>
 
     <section class="section section-light">
-      <div class="container">
-        <div class="seporator"></div>
+      <div class="container container-padding-left">
+        <div class="seporator section-seporator"></div>
         <h2 class="section-title">Схема работы</h2>
         <ol class="steps">
           <li class="steps-item">
