--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Aliance</title>
@@ -59,7 +60,7 @@
       <a href="tel:+7(499)6861014" class="mobile-phone"> +7 (499) 686-10-14 </a>
       <div class="mobile-info">
         <svg class="icon-phone" width="12px" height="16px">
-          <use href="./img/mob-info-sprite.svg#adress-icon"></use>
+          <use href="./img/sprite.svg#address-icon"></use>
         </svg>
         <address class="mobile-info-address">
           г. Мосвка, Холодильный пер. 4к1с8
@@ -67,7 +68,7 @@
       </div>
       <div class="mobile-info">
         <svg class="icon-phone" width="16px" height="12px">
-          <use href="./img/mob-info-sprite.svg#mail-icon"></use>
+          <use href="./img/sprite.svg#mail-icon"></use>
         </svg>
         <a href="mailto:a.dragunov@tdaliance.ru" class="mobile-info-email">
           a.dragunov@tdaliance.ru
@@ -77,12 +78,12 @@
       <div class="mobile-social">
         <a class="mobile-social-link" href="">
           <svg class="icon-phone" width="19px" height="12px">
-            <use href="./img/mob-info-sprite.svg#vk-icon"></use>
+            <use href="./img/sprite.svg#vk-icon"></use>
           </svg>
         </a>
         <a class="mobile-slink" href="">
           <svg class="icon-phone" width="16px" height="16px">
-            <use href="./img/mob-info-sprite.svg#inst-icon"></use>
+            <use href="./img/sprite.svg#inst-icon"></use>
           </svg>
         </a>
       </div>
@@ -149,39 +150,64 @@
           <div class="header-button button">Подробнее о компании</div>
         </div>
         <!-- /.header-content -->
-        <ul class="header-features">
-          <li class="header-features-item">
-            <svg class="icon" width="21px" height="28px">
-              <use href="./img/sprite.svg#time"></use>
-            </svg>
-            <p class="header-features-text">Непрерывная работа c 2017 года</p>
-          </li>
-          <li class="header-features-item">
-            <svg class="icon" width="29px" height="29px">
-              <use href="./img/sprite.svg#certificate"></use>
-            </svg>
-            <p class="header-features-text">Вся продукция сертифицирована</p>
-          </li>
-          <li class="header-features-item">
-            <svg class="icon" width="25px" height="28px">
-              <use href="./img/sprite.svg#control"></use>
-            </svg>
-            <p class="header-features-text">Контроль качества на всех этапах</p>
-          </li>
-          <li class="header-features-item">
-            <svg class="icon" width="35px" height="25px">
-              <use href="./img/sprite.svg#delivery"></use>
-            </svg>
-            <p class="header-features-text">Возможны поставки по всей России</p>
-          </li>
-          <li class="header-features-item">
-            <svg class="icon" width="32px" height="25px">
-              <use href="./img/sprite.svg#speed"></use>
-            </svg>
-            <p class="header-features-text">Оперативное производство</p>
-          </li>
-        </ul>
-        <!--/.header-features-->
+
+        <!-- Slider main container -->
+        <div class="swiper">
+          <!-- Additional required wrapper -->
+          <ul class="swiper-wrapper header-features">
+            <!-- Slides -->
+            <li class="swiper-slide header-features-item">
+              <svg class="icon" width="21px" height="28px">
+                <use href="./img/sprite.svg#time"></use>
+              </svg>
+              <p class="header-features-text">Непрерывная работа c 2017 года</p>
+            </li>
+            <li class="swiper-slide header-features-item">
+              <svg class="icon" width="29px" height="29px">
+                <use href="./img/sprite.svg#certificate"></use>
+              </svg>
+              <p class="header-features-text">Вся продукция сертифицирована</p>
+            </li>
+            <li class="swiper-slide header-features-item">
+              <svg class="icon" width="25px" height="28px">
+                <use href="./img/sprite.svg#control"></use>
+              </svg>
+              <p class="header-features-text">
+                Контроль качества на всех этапах
+              </p>
+            </li>
+            <li class="swiper-slide header-features-item">
+              <svg class="icon" width="35px" height="25px">
+                <use href="./img/sprite.svg#delivery"></use>
+              </svg>
+              <p class="header-features-text">
+                Возможны поставки по всей России
+              </p>
+            </li>
+            <li class="swiper-slide header-features-item">
+              <svg class="icon" width="32px" height="25px">
+                <use href="./img/sprite.svg#speed"></use>
+              </svg>
+              <p class="header-features-text">Оперативное производство</p>
+            </li>
+          </ul>
+
+          <!-- If we need navigation buttons -->
+          <div class="slider-buttons">
+            <div class="slider-button-prev">
+              <svg class="icon" width="36px" height="24px">
+                <use href="./img/sprite.svg#arrow-prev"></use>
+              </svg>
+            </div>
+            <div class="slider-button-next">
+              <svg class="icon" width="36px" height="24px">
+                <use href="./img/sprite.svg#arrow-next"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- /.slider-buttons -->
+        </div>
+        <!-- /.swiper -->
       </div>
       <!-- /.container -->
     </header>
@@ -227,6 +253,7 @@
       </div>
     </section>
 
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
