add: slider for steps

--- a/index.html
+++ b/index.html
@@ -216,40 +216,61 @@
       <div class="container">
         <div class="seporator"></div>
         <h2 class="section-title">Схема работы</h2>
-        <ol class="steps">
-          <li class="steps-item">
-            <span class="steps-num">01</span>
-            <h3 class="steps-title">Знакомство</h3>
-            <p class="steps-text">
-              Безусловно, сплочённость команды профессионалов позволяет оценить
-              значение форм воздействия.
-            </p>
-            <a href="" class="steps-link">Оставить заявку</a>
-          </li>
-          <li class="steps-item">
-            <span class="steps-num">02</span>
-            <h3 class="steps-title">Заключение договора</h3>
-            <p class="steps-text">
-              Лишь интерактивные прототипы призваны к ответу.
-            </p>
-          </li>
-          <li class="steps-item">
-            <span class="steps-num">03</span>
-            <h3 class="steps-title">Производство</h3>
-            <p class="steps-text">
-              А также стремящиеся вытеснить традиционное производство,
-              нанотехнологии функционально разнесены на независимые элементы.
-            </p>
-          </li>
-          <li class="steps-item">
-            <span class="steps-num">04</span>
-            <h3 class="steps-title">Доставка</h3>
-            <p class="steps-text">
-              В частности, экономическая повестка сегодняшнего дня говорит о
-              возможностях приоритизации разума над эмоциями.
-            </p>
-          </li>
-        </ol>
+
+        <!-- Slider main container -->
+        <div class="steps-swiper">
+          <!-- Additional required wrapper -->
+          <ol class="swiper-wrapper steps">
+            <!-- Slides -->
+            <li class="swiper-slide steps-item">
+              <span class="steps-num">01</span>
+              <h3 class="steps-title">Знакомство</h3>
+              <p class="steps-text">
+                Безусловно, сплочённость команды профессионалов позволяет
+                оценить значение форм воздействия.
+              </p>
+              <a href="" class="steps-link">Оставить заявку</a>
+            </li>
+            <li class="swiper-slide steps-item">
+              <span class="steps-num">02</span>
+              <h3 class="steps-title">Заключение договора</h3>
+              <p class="steps-text">
+                Лишь интерактивные прототипы призваны к ответу.
+              </p>
+            </li>
+            <li class="swiper-slide steps-item">
+              <span class="steps-num">03</span>
+              <h3 class="steps-title">Производство</h3>
+              <p class="steps-text">
+                А также стремящиеся вытеснить традиционное производство,
+                нанотехнологии функционально разнесены на независимые элементы.
+              </p>
+            </li>
+            <li class="swiper-slide steps-item">
+              <span class="steps-num">04</span>
+              <h3 class="steps-title">Доставка</h3>
+              <p class="steps-text">
+                В частности, экономическая повестка сегодняшнего дня говорит о
+                возможностях приоритизации разума над эмоциями.
+              </p>
+            </li>
+          </ol>
+
+          <!-- If we need navigation buttons -->
+          <div class="steps-slider-buttons">
+            <div class="steps-slider-button-prev">
+              <svg class="icon" width="26px" height="14px">
+                <use href="./img/sprite.svg#steps-arrow-prev"></use>
+              </svg>
+            </div>
+            <div class="steps-slider-button-next">
+              <svg class="icon" width="26px" height="14px">
+                <use href="./img/sprite.svg#steps-arrow-next"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- /.steps-slider-buttons -->
+        </div>
       </div>
     </section>
 
