--- a/index.html
+++ b/index.html
@@ -96,8 +96,11 @@
         <div class="mobile-menu-line"></div>
       </a>
       <a href="./" class="header-logo">
-        <svg class="logo-svg">
+        <svg class="logo-svg logo-light">
           <use href="./img/sprite.svg#logo-light"></use>
+        </svg>
+        <svg class="logo-svg logo-dark">
+          <use href="./img/sprite.svg#logo-dark"></use>
         </svg>
       </a>
       <ul class="header-nav">
