fix: designMode problem

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="mobile-menu">
       <ul class="mobile-menu-nav">
         <li class="mobile-menu-nav-item">
-          <a href="`" class="mobile-menu-link">О компании</a>
+          <a href="#" class="mobile-menu-link">О компании</a>
         </li>
         <li class="mobile-menu-nav-item">
           <a href="" class="mobile-menu-link">Контрактное производство</a>
@@ -105,19 +105,19 @@
       </a>
       <ul class="header-nav">
         <li class="header-nav-item">
-          <a href="`" class="header-nav-link">О компании</a>
+          <a href="#" class="header-nav-link">О компании</a>
         </li>
         <li class="header-nav-item">
-          <a href="" class="header-nav-link">Контрактное производство</a>
+          <a href="#" class="header-nav-link">Контрактное производство</a>
         </li>
         <li class="header-nav-item">
-          <a href="" class="header-nav-link">Собственные торговые марки</a>
+          <a href="#" class="header-nav-link">Собственные торговые марки</a>
         </li>
         <li class="header-nav-item">
-          <a href="" class="header-nav-link">Новости</a>
+          <a href="#" class="header-nav-link">Новости</a>
         </li>
         <li class="header-nav-item">
-          <a href="" class="header-nav-link">Контакты</a>
+          <a href="#" class="header-nav-link">Контакты</a>
         </li>
       </ul>
       <div class="header-phone">
