--- a/index.html
+++ b/index.html
@@ -276,6 +276,146 @@
         </div>
       </div>
     </section>
+    <!-- /.section-light -->
+
+    <section class="section production">
+      <div class="container">
+        <div class="seporator"></div>
+        <h2 class="section-title">Контрактное производство</h2>
+        <div class="cards">
+          <a href="#" class="card">
+            <div class="card-content">
+              <h3 class="card-title">Автомобильная химия</h3>
+              <p class="card-text">
+                Безусловно, сплочённость команды профессионалов позволяет
+                оценить значение форм воздействия.
+              </p>
+            </div>
+            <img
+              src="./img/card-image/avto-him.jpg"
+              alt="Авто химия"
+              class="card-image"
+            />
+          </a>
+          <a href="#" class="card">
+            <div class="card-content">
+              <h3 class="card-title">Бытовая химия</h3>
+              <p class="card-text">
+                А также стремящиеся вытеснить традиционное производство,
+                нанотехнологии функционально разнесены на независимые элементы.
+              </p>
+            </div>
+            <img
+              src="./img/card-image/bit-him.jpg"
+              alt="Бытовая химия"
+              class="card-image"
+            />
+          </a>
+          <a href="#" class="card">
+            <div class="card-content">
+              <h3 class="card-title">Дезинфицирующие средства</h3>
+              <p class="card-text">
+                Лишь интерактивные прототипы призваны к ответу.
+              </p>
+            </div>
+            <img
+              src="./img/card-image/dezinfect.jpg"
+              alt="Дизенфицирующие стредства"
+              class="card-image"
+            />
+          </a>
+          <a href="#" class="card">
+            <div class="card-content">
+              <h3 class="card-title">Пищевые аэрозоли</h3>
+              <p class="card-text">
+                Безусловно, сплочённость команды профессионалов позволяет
+                оценить значение форм воздействия.
+              </p>
+            </div>
+            <img
+              src="./img/card-image/dezinfect.jpg"
+              alt="Пищевые аэрозоли"
+              class="card-image"
+            />
+          </a>
+          <a href="#" class="card">
+            <div class="card-content">
+              <h3 class="card-title">Косметическая продукция</h3>
+              <p class="card-text">
+                Лишь интерактивные прототипы призваны к ответу.
+              </p>
+            </div>
+            <img
+              src="./img/card-image/cosmetic-prod.jpg"
+              alt="Косметическая продукция"
+              class="card-image"
+            />
+          </a>
+          <a href="#" class="card">
+            <div class="card-content">
+              <h3 class="card-title">Краски аэрозольные</h3>
+              <p class="card-text">
+                А также стремящиеся вытеснить традиционное производство,
+                нанотехнологии функционально разнесены на независимые элементы.
+              </p>
+            </div>
+            <img
+              src="./img/card-image/paints.jpg"
+              alt="Краски и аэрозоли"
+              class="card-image"
+            />
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- /.section production -->
+    <section class="section trademarks">
+      <div class="container">
+        <div class="seporator"></div>
+        <h2 class="section-title">Cобственные торговые марки</h2>
+        <div class="trademarks-cards">
+          <a href="" class="trademarks-card">
+            <svg class="icon trademarks-img" width="140px" height="120px">
+              <use href="./img/trademarks-svg/trademarks.svg#ag-tech"></use>
+            </svg>
+            <div class="trademarks-card-content">
+              <h3 class="trademarks-card-title">Автохимия AG-Tech</h3>
+              <p class="trademarks-card-text">
+                Для современного мира разбавленное изрядной долей эмпатии,
+                рациональное мышление создаёт предпосылки для поставленных
+                обществом задач.
+              </p>
+            </div>
+            <h3 class="trademarks-title-mobile">Автохимия AG-Tech</h3>
+            <p class="trademarks-text-mobile">
+              Для современного мира разбавленное изрядной долей эмпатии,
+              рациональное мышление создаёт предпосылки для поставленных
+              обществом задач.
+            </p>
+          </a>
+          <a href="" class="trademarks-card">
+            <svg class="icon trademarks-img" width="102px" height="140px">
+              <use href="./img/trademarks-svg/trademarks.svg#ap-prod"></use>
+            </svg>
+            <div class="trademarks-card-content">
+              <h3 class="trademarks-card-title">Автохимия AP</h3>
+              <p class="trademarks-card-text">
+                Для современного мира разбавленное изрядной долей эмпатии,
+                рациональное мышление создаёт предпосылки для поставленных
+                обществом задач.
+              </p>
+            </div>
+            <h3 class="trademarks-title-mobile">Автохимия AP</h3>
+            <p class="trademarks-text-mobile">
+              Для современного мира разбавленное изрядной долей эмпатии,
+              рациональное мышление создаёт предпосылки для поставленных
+              обществом задач.
+            </p>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- /.section trademarks -->
 
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
