--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <section class="section production">
       <div class="container">
         <div class="seporator"></div>
-        <h2 class="section-title">Контрактное производство</h2>
+        <h2 class="section-title section-mb">Контрактное производство</h2>
         <div class="cards">
           <a href="#" class="card">
             <div class="card-content">
