add: section product and trademarks

--- a/index.html
+++ b/index.html
@@ -276,7 +276,128 @@
         </div>
       </div>
     </section>
-
+    <section class="section section-products">
+      <div class="container">
+        <div class="seporator"></div>
+        <h2 class="section-title">Контрактное производство</h2>
+        <div class="section-product-cards">
+          <div class="product-card">
+            <div class="product-card-content">
+              <h3 class="product-card-title">Автомобильная химия</h3>
+              <p class="product-card-text">
+                Безусловно, сплочённость команды профессионалов позволяет
+                оценить значение форм воздействия.
+              </p>
+            </div>
+            <img
+              class="product-card-image"
+              src="./img/products-img/avto-him.jpg"
+              alt="avto-him"
+            />
+          </div>
+          <div class="product-card">
+            <div class="product-card-content">
+              <h3 class="product-card-title">Бытовая химия</h3>
+              <p class="product-card-text">
+                А также стремящиеся вытеснить традиционное производство,
+                нанотехнологии функционально разнесены на независимые элементы.
+              </p>
+            </div>
+            <img
+              class="product-card-image"
+              src="./img/products-img/bit-him.jpg"
+              alt="bit-him"
+            />
+          </div>
+          <div class="product-card">
+            <div class="product-card-content">
+              <h3 class="product-card-title">Дезинфицирующие средства</h3>
+              <p class="product-card-text">
+                Лишь интерактивные прототипы призваны к ответу.
+              </p>
+            </div>
+            <img
+              class="product-card-image"
+              src="./img/products-img/dezinfect.jpg"
+              alt="bit-him"
+            />
+          </div>
+          <div class="product-card">
+            <div class="product-card-content">
+              <h3 class="product-card-title">Пищевые аэрозоли</h3>
+              <p class="product-card-text">
+                Безусловно, сплочённость команды профессионалов позволяет
+                оценить значение форм воздействия.
+              </p>
+            </div>
+            <img
+              class="product-card-image"
+              src="./img/products-img/dezinfect.jpg"
+              alt="bit-him"
+            />
+          </div>
+          <div class="product-card">
+            <div class="product-card-content">
+              <h3 class="product-card-title">Косметическая продукция</h3>
+              <p class="product-card-text">
+                Лишь интерактивные прототипы призваны к ответу.
+              </p>
+            </div>
+            <img
+              class="product-card-image"
+              src="./img/products-img/avto-him.jpg"
+              alt="cosm-prod"
+            />
+          </div>
+          <div class="product-card">
+            <div class="product-card-content">
+              <h3 class="product-card-title">Краски аэрозольные</h3>
+              <p class="product-card-text">
+                А также стремящиеся вытеснить традиционное производство,
+                нанотехнологии функционально разнесены на независимые элементы.
+              </p>
+            </div>
+            <img
+              class="product-card-image"
+              src="./img/products-img/bit-him.jpg"
+              alt="cosm-prod"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.section-products -->
+    <section class="section trdemarks">
+      <div class="container">
+        <div class="seporator"></div>
+        <h2 class="section-title">Собственные торговые марки</h2>
+        <div class="trademarks-cards">
+          <div class="trademarks-card">
+            <svg class="icon trademarks-image">
+              <use href="./img/sprite.svg#agtech"></use>
+            </svg>
+            <h3 class="trademarks-card-title">Автохимия AG-Tech</h3>
+            <p class="trademarks-card-text">
+              Для современного мира разбавленное изрядной долей эмпатии,
+              рациональное мышление создаёт предпосылки для поставленных
+              обществом задач.
+            </p>
+          </div>
+          <div class="trademarks-card">
+            <svg class="icon trademarks-image">
+              <use href="./img/sprite.svg#ap"></use>
+            </svg>
+            <h3 class="trademarks-card-title">Автохимия AP</h3>
+            <p class="trademarks-card-text">
+              Для современного мира разбавленное изрядной долей эмпатии,
+              рациональное мышление создаёт предпосылки для поставленных
+              обществом задач.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.trdemarks -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
