fix: pixel perfect

--- a/index.html
+++ b/index.html
@@ -367,13 +367,13 @@
       </div>
     </section>
     <!-- /.section-products -->
-    <section class="section trdemarks">
+    <section class="section trademarks">
       <div class="container">
         <div class="seporator"></div>
         <h2 class="section-title">Собственные торговые марки</h2>
         <div class="trademarks-cards">
           <div class="trademarks-card">
-            <svg class="icon trademarks-image">
+            <svg class="icon trademarks-image ag-tech-image">
               <use href="./img/sprite.svg#agtech"></use>
             </svg>
             <h3 class="trademarks-card-title">Автохимия AG-Tech</h3>
