--- a/index.html
+++ b/index.html
@@ -260,13 +260,13 @@
           </ol>
 
           <!-- If we need navigation buttons -->
-          <div class="steps-slider-buttons">
-            <div class="steps-slider-button-prev">
+          <div class="steps-slider-buttons primary-buttons-wrapper">
+            <div class="steps-slider-button-prev primary-button-prev">
               <svg class="icon" width="26px" height="14px">
                 <use href="./img/sprite.svg#steps-arrow-prev"></use>
               </svg>
             </div>
-            <div class="steps-slider-button-next">
+            <div class="steps-slider-button-next primary-button-next">
               <svg class="icon" width="26px" height="14px">
                 <use href="./img/sprite.svg#steps-arrow-next"></use>
               </svg>
@@ -503,69 +503,69 @@
           </div>
           <!-- /.clients-content -->
           <div class="clients-logo-list">
-            <div class="clients-logo-item">
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
-            <div class="clients-logo-item">
+            </a>
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
-            <div class="clients-logo-item">
+            </a>
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
-            <div class="clients-logo-item">
+            </a>
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
-            <div class="clients-logo-item">
+            </a>
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
-            <div class="clients-logo-item">
+            </a>
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
-            <div class="clients-logo-item">
+            </a>
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
-            <div class="clients-logo-item">
+            </a>
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
-            <div class="clients-logo-item">
+            </a>
+            <a href="#" class="clients-logo-item">
               <img
                 src="./img/client-img/client-img.png"
                 alt=""
                 class="clients-logo"
               />
-            </div>
+            </a>
           </div>
           <!-- /.clients-logo -->
         </div>
@@ -573,6 +573,81 @@
       </div>
     </section>
     <!-- /.clients -->
+    <section class="section blog">
+      <div class="container">
+        <div class="seporator"></div>
+        <h2 class="section-title">Блог экспертов в области производства</h2>
+        <div class="swiper blog-swiper">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper blog-cards">
+            <!-- Slides -->
+            <a href="#" class="swiper-slide blog-card">
+              <img
+                src="./img/blog-img/blog-img.jpg"
+                alt="blog-image"
+                class="blog-card-image"
+              />
+              <h3 class="blog-card-title">
+                Современная методология разработки одухотворила всех причастных
+              </h3>
+              <p class="blog-card-text">
+                Действия представителей оппозиции, превозмогая сложившуюся
+                непростую экономическую ситуацию, в равной степени
+                предоставлены...
+              </p>
+            </a>
+            <a href="#" class="swiper-slide blog-card">
+              <img
+                src="./img/blog-img/blog-img2.jpg"
+                alt="blog-image"
+                class="blog-card-image"
+              />
+              <h3 class="blog-card-title">
+                Сложно сказать, почему жизнь прекрасна
+              </h3>
+              <p class="blog-card-text">
+                Сложно сказать, почему элементы политического процесса
+                функционально разнесены на независимые элементы. Безусловно,
+                высокотехнологичная...
+              </p>
+            </a>
+            <a href="#" class="swiper-slide blog-card">
+              <img
+                src="./img/blog-img/blog-img.jpg"
+                alt="blog-image"
+                class="blog-card-image"
+              />
+              <h3 class="blog-card-title">
+                Современная методология разработки одухотворила всех причастных
+              </h3>
+              <p class="blog-card-text">
+                Действия представителей оппозиции, превозмогая сложившуюся
+                непростую экономическую ситуацию, в равной степени
+                предоставлены...
+              </p>
+            </a>
+          </div>
+
+          <div class="blog-slider-footer">
+            <a href="#" class="button-link">Весь блог</a>
+            <div class="blog-slider-buttons primary-buttons-wrapper">
+              <div class="blog-slider-button-prev primary-button-prev">
+                <svg class="icon" width="26px" height="14px">
+                  <use href="./img/sprite.svg#steps-arrow-prev"></use>
+                </svg>
+              </div>
+              <div class="blog-slider-button-next primary-button-next">
+                <svg class="icon" width="26px" height="14px">
+                  <use href="./img/sprite.svg#steps-arrow-next"></use>
+                </svg>
+              </div>
+            </div>
+            <!-- /.blog-slider-buttons -->
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /.blog -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
