--- a/index.html
+++ b/index.html
@@ -262,12 +262,12 @@
           <!-- If we need navigation buttons -->
           <div class="steps-slider-buttons primary-buttons-wrapper">
             <div class="steps-slider-button-prev primary-button-prev">
-              <svg class="icon" width="26px" height="14px">
+              <svg class="icon button-arrow" width="26px" height="14px">
                 <use href="./img/sprite.svg#steps-arrow-prev"></use>
               </svg>
             </div>
             <div class="steps-slider-button-next primary-button-next">
-              <svg class="icon" width="26px" height="14px">
+              <svg class="icon button-arrow" width="26px" height="14px">
                 <use href="./img/sprite.svg#steps-arrow-next"></use>
               </svg>
             </div>
@@ -632,12 +632,12 @@
             <a href="#" class="button-link">Весь блог</a>
             <div class="blog-slider-buttons primary-buttons-wrapper">
               <div class="blog-slider-button-prev primary-button-prev">
-                <svg class="icon" width="26px" height="14px">
+                <svg class="icon button-arrow" width="26px" height="14px">
                   <use href="./img/sprite.svg#steps-arrow-prev"></use>
                 </svg>
               </div>
               <div class="blog-slider-button-next primary-button-next">
-                <svg class="icon" width="26px" height="14px">
+                <svg class="icon button-arrow" width="26px" height="14px">
                   <use href="./img/sprite.svg#steps-arrow-next"></use>
                 </svg>
               </div>
