--- a/index.html
+++ b/index.html
@@ -648,6 +648,65 @@
       </div>
     </section>
     <!-- /.blog -->
+    <section class="section cta">
+      <div class="bg-grey section-cta">
+        <img
+          src="./img/cta-img/cta-image.png"
+          alt="call to action"
+          class="cta-image"
+        />
+        <div class="cta-form-wrapper container">
+          <form action="#" class="cta-form">
+            <h2 class="section-title cta-form-title">Хотите сотрудничать?</h2>
+            <p class="cta-form-text">
+              Оставьте заявку, наш менеджер свяжется с Вами в ближайшее время
+              ответит на все интересующие вопросы и поможем даже в самых сложных
+              случаях!
+            </p>
+            <div class="input-group-wrapper">
+              <div class="input-group">
+                <input
+                  id="user-name"
+                  type="text"
+                  class="input"
+                  placeholder=" "
+                />
+                <label class="input-group-label" for="user-name">Имя</label>
+              </div>
+              <div class="input-group">
+                <input
+                  id="user-phone"
+                  type="tel"
+                  class="input"
+                  placeholder=" "
+                />
+                <label class="input-group-label" for="user-phone"
+                  >Номер телефона</label
+                >
+              </div>
+            </div>
+            <!-- /.input-group-wrapper -->
+            <div class="cta-form-footer">
+              <button type="submit" class="button cta-form-button">
+                Оставить заявку
+              </button>
+              <div class="notify">
+                <svg class="notify-icon" width="12px" height="16px">
+                  <use href="./img/sprite.svg#notify-icon"></use>
+                </svg>
+                <p class="notify-text">
+                  Обращаясь к нам вы получаете не только профессиональную
+                  работу, но и абсолютную конфиденциальность информации!
+                </p>
+              </div>
+            </div>
+            <!-- /.cta-form-footer -->
+          </form>
+        </div>
+        <!-- /.cta-form-wrapper -->
+      </div>
+    </section>
+    <!-- /.cta -->
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
