--- a/index.html
+++ b/index.html
@@ -707,6 +707,131 @@
       </div>
     </section>
     <!-- /.cta -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-top">
+          <svg class="logo-svg footer-logo">
+            <use href="./img/sprite.svg#logo-dark"></use>
+          </svg>
+          <a href="tel:+74996861014" class="footer-phone">+7 (499) 686-10-14</a>
+          <div class="footer-info">
+            <svg class="address-icon" width="12px" height="16px">
+              <use href="./img/sprite.svg#address-icon"></use>
+            </svg>
+            <address class="footer-info-address">
+              г. Мосвка, Холодильный пер. 4к1с8
+            </address>
+          </div>
+          <!-- /.footer-info -->
+          <div class="footer-info">
+            <svg class="email-icon" width="16px" height="12px">
+              <use href="./img/sprite.svg#mail-icon"></use>
+            </svg>
+            <a href="mailto:a.dragunov@tdaliance.ru" class="footer-info-email">
+              a.dragunov@tdaliance.ru
+            </a>
+          </div>
+          <!-- /.footer-info -->
+          <div class="footer-social">
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon" width="19px" height="12px">
+                <use href="./img/sprite.svg#vk-icon"></use>
+              </svg>
+            </a>
+            <a class="footer-social-link" href="">
+              <svg class="footer-social-icon" width="13px" height="13px">
+                <use href="./img/sprite.svg#inst-icon"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
+        <!-- /.footer-top -->
+      </div>
+      <hr color="#ebebf0" class="footer-seporator" />
+      <div class="container">
+        <div class="footer-bottom">
+          <div class="footer-menu-wrapper">
+            <h2 class="footer-menu-title">Контрактное производство</h2>
+            <ul class="footer-menu-list footer-menu-column-2">
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Автомобильная химия</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Бытовая химия</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">
+                  Дезинфицирующие средства
+                </a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Пищевые аэрозоли</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Косметическая продукция</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Краски аэрозольные</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer-menu-wrapper -->
+          <div class="footer-menu-wrapper">
+            <h2 class="footer-menu-title">Собственные марки</h2>
+            <ul class="footer-menu-list">
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Автохимия AG-Tech</a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link">Автохимия AG-Tech</a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer-menu-wrapper -->
+          <div class="footer-menu-wrapper">
+            <ul class="footer-menu-list footer-menu-list-pad-0">
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link footer-menu-link-bold">
+                  О компании
+                </a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link footer-menu-link-bold">
+                  Новости
+                </a>
+              </li>
+              <li class="footer-menu-item">
+                <a href="#" class="footer-menu-link footer-menu-link-bold">
+                  Контакты
+                </a>
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer-menu-wrapper -->
+        </div>
+      </div>
+      <!-- /.container -->
+      <hr color="#ebebf0" class="footer-seporator" />
+      <div class="container">
+        <div class="footer-wrapper">
+          <div class="footer-legal">
+            <p class="footer-copyright">
+              &copy; 2022 «Aliance Production». Все права защищены.
+            </p>
+            <a href="#" class="footer-policy">Политики конфиденциальности</a>
+          </div>
+          <!-- /.footer-legal -->
+          <div class="footer-author">
+            <span class="made-in">Сделано в</span>
+            <svg width="52px" height="11px">
+              <use href="./img/sprite.svg#ruso"></use>
+            </svg>
+          </div>
+        </div>
+        <!-- /.footer-wrapper -->
+      </div>
+      <!-- /.container -->
+    </footer>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
