--- a/index.html
+++ b/index.html
@@ -686,11 +686,10 @@
       <!-- /.container -->
     </footer>
     <div class="modal">
-      <div class="modal-close-area"></div>
       <div class="modal-dialog">
         <div class="modal-dialog-header">
           <h2 class="modal-title">Есть вопросы?</h2>
-          <a href="" class="modal-close">
+          <a href="" class="modal-close" data-toggle="modal">
             <svg class="close-icon" width="24" height="24">
               <use href="./img/sprite.svg#close"></use>
             </svg>
